--- a/package.json
+++ b/package.json
@@ -46,14 +46,14 @@
     "@angular-devkit/build-angular": "~0.12.3",
     "@angular-devkit/core": "~7.2.3",
     "@angular-devkit/schematics": "~7.2.3",
-    "@angular/cli": "~7.2.3",
+    "@angular/cli": "7.2.4",
     "@angular/compiler": "~7.2.2",
     "@angular/compiler-cli": "~7.2.2",
     "@angular/language-service": "~7.2.2",
     "@ionic/angular-toolkit": "~1.2.0",
-    "@types/node": "~10.12.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~10.12.0",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
@@ -71,8 +71,8 @@
   "cordova": {
     "plugins": {
       "cordova-plugin-googlemaps": {
-        "API_KEY_FOR_ANDROID": "AIzaSyAjrHxceAZUmZa6rWNensjOpFQbWkcKeZE",
-        "API_KEY_FOR_IOS": "AIzaSyAjrHxceAZUmZa6rWNensjOpFQbWkcKeZE"
+        "API_KEY_FOR_ANDROID": "AIzaSyAvPJ20d2ok4mJhQnos4joaFTPEacDxrqg",
+        "API_KEY_FOR_IOS": "AIzaSyAvPJ20d2ok4mJhQnos4joaFTPEacDxrqg"
       },
       "cordova-plugin-whitelist": {},
       "cordova-plugin-statusbar": {},
