--- a/package.json
+++ b/package.json
@@ -28,10 +28,11 @@
     "@ionic/angular": "^4.0.0",
     "@ionic/pro": "2.0.4",
     "angularfire2": "^5.1.1",
+    "cordova-android": "7.1.4",
     "cordova-browser": "5.0.4",
     "cordova-ios": "4.5.5",
     "cordova-plugin-device": "^2.0.2",
-    "cordova-plugin-googlemaps": "git+https://github.com/mapsplugin/cordova-plugin-googlemaps.git#multiple_maps",
+    "cordova-plugin-googlemaps": "^2.5.0",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^3.1.2",
     "cordova-plugin-splashscreen": "^5.0.2",
@@ -71,20 +72,26 @@
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
-      "cordova-plugin-googlemaps": {
-        "API_KEY_FOR_ANDROID": "AIzaSyAvPJ20d2ok4mJhQnos4joaFTPEacDxrqg",
-        "API_KEY_FOR_IOS": "AIzaSyAvPJ20d2ok4mJhQnos4joaFTPEacDxrqg"
-      },
       "cordova-plugin-whitelist": {},
       "cordova-plugin-statusbar": {},
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-googlemaps": {
+        "API_KEY_FOR_IOS": "AIzaSyDjaLTO-ZVPyPQkn5n_9aZLfPq0oc82V_M",
+        "API_KEY_FOR_ANDROID": "AIzaSyDjaLTO-ZVPyPQkn5n_9aZLfPq0oc82V_M",
+        "API_KEY_FOR_ANDRIOD": "AIzaSyDjaLTO-ZVPyPQkn5n_9aZLfPq0oc82V_M",
+        "LOCATION_WHEN_IN_USE_DESCRIPTION": "This app wants to get your location while this app runs only.",
+        "LOCATION_ALWAYS_USAGE_DESCRIPTION": "This app wants to get your location always, even this app runs in background.",
+        "PLAY_SERVICES_VERSION": "15.0.1",
+        "ANDROID_SUPPORT_V4_VERSION": "27.+"
+      }
     },
     "platforms": [
       "browser",
-      "ios"
+      "ios",
+      "android"
     ]
   }
 }
